--- a/FlaskApp/Jenkinsfile
+++ b/FlaskApp/Jenkinsfile
@@ -3,7 +3,7 @@ pipeline {
     stages { 
         stage('Build') {
             steps {
-                sh 'docker build -t python-app .' 
+                sh 'cd FlaskApp && docker build -t python-app . && cd ..' 
             }
         }
 
