--- a/FlaskApp/Jenkinsfile
+++ b/FlaskApp/Jenkinsfile
@@ -1,12 +1,13 @@
 pipeline {
     environment {
     registry = "python-app"
+    dockerImage = '' 
     }
     agent any
     stages { 
         stage('Build') {
             steps {
-                docker.build registry + ":$BUILD_NUMBER"
+                dockerImage = docker.build registry
             }
         }
 
