Fix docker issues

--- a/FlaskApp/Jenkinsfile
+++ b/FlaskApp/Jenkinsfile
@@ -6,9 +6,9 @@ pipeline {
     agent any
     stages { 
         stage('Build') {
-            steps {
-                dockerImage = docker.build registry
-            }
+            script { 
+                    dockerImage = docker.build registry
+                }
         }
 
         stage('check'){
