Add docker login step

--- a/FlaskApp/Jenkinsfile
+++ b/FlaskApp/Jenkinsfile
@@ -21,6 +21,7 @@ pipeline {
             steps {
                 script {
                     withDockerRegistry([ credentialsId: "$registryCredential", url: "" ]) {
+                        docker login docker.io
                         dockerImage.push("$BUILD_NUMBER")
                         dockerImage.push('latest')
                     }
