--- a/FlaskApp/Jenkinsfile
+++ b/FlaskApp/Jenkinsfile
@@ -1,6 +1,6 @@
 pipeline {
     environment {
-    registry = "python-app"
+    registry = "48662523/python-app"
     dockerImage = ''
     registryCredential = 'dockerhub'
     }
@@ -10,35 +10,32 @@ pipeline {
             steps {
                 dir('FlaskApp'){
                     script {
-                        dockerImage = docker.build registry
+                        dockerImage = docker.build registry + ":$BUILD_NUMBER"
                         }
                     }
                 }
             }
 
-        stage('Push') {
-          
-            steps {
+        stage('Deploy') {
+            steps{
                 script {
-                    withDockerRegistry([ credentialsId: "$registryCredential", url: "" ]) {
-                        docker login docker.io
-                        dockerImage.push("$BUILD_NUMBER")
-                        dockerImage.push('latest')
+                    docker.withRegistry( '', registryCredential ) {
+                        dockerImage.push()
+                        }
                     }
                 }
             }
-        }
 
         stage('Clean') {
-            steps { 
-                sh "docker rmi $registry:latest"
+            steps{
+                sh "docker rmi $registry:$BUILD_NUMBER"
                 sh "docker rmi alpine:latest"
+                }
             }
-        }
 
         stage('check'){
             steps {
-                sh 'docker images'
+                sh "docker images"
             }
         }
     }
